--- a/Prevu.Synoptics.V3085_Anviplas/P520.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P520.xaml
@@ -204,7 +204,7 @@
     <Machines:V01_VS_Airlock Canvas.Left="1155" Canvas.Top="751" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VS_Airlock Canvas.Left="402" Canvas.Top="749" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_DV_Diverter Canvas.Left="1018" Canvas.Top="531" Height="68" Width="104" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:DetailsLabel ComponentName="520-VALVE" DetailsPageName="D520" Canvas.Left="716" Canvas.Top="235" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="520-VALVE" DetailsPageName="D520" Canvas.Left="628" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
       ComponentName="520-01-MA1"  Canvas.Left="771" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
@@ -263,5 +263,28 @@
             JumpToLabel="511-01-MA1" Canvas.Left="1230" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel Canvas.Top="473"  Canvas.Left="1025" ComponentName="525-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="584" Canvas.Top="776" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Rectangle Height="98" Canvas.Left="574" Stroke="Black" Canvas.Top="323" Width="172" HorizontalAlignment="Center" VerticalAlignment="Top" Opacity="0.7"/>
+    <Rectangle Height="172" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="659" Canvas.Top="246" HorizontalAlignment="Center" VerticalAlignment="Top" Opacity="0.7">
+      <Rectangle.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Rectangle.RenderTransform>
+    </Rectangle>
+    <Rectangle Height="2" Stroke="Black" Width="54" RenderTransformOrigin="0.5,0.5" Canvas.Left="708" Canvas.Top="305" HorizontalAlignment="Left" VerticalAlignment="Center" Opacity="0.7">
+      <Rectangle.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Rectangle.RenderTransform>
+    </Rectangle>
+    <Labels:DeviceLabel 
+      ComponentName="520-03-MA1"  Canvas.Left="725" Canvas.Top="235" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="3,0.36"/>
   </Canvas>
 </UserControl>
