Prevu.Drawings: Some Fix

--- a/Prevu.Drawings/Machines/Release_01/Material Separation/V01_VB_VibratingScreen.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Material Separation/V01_VB_VibratingScreen.xaml
@@ -6,49 +6,49 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" 
              IsHitTestVisible="False">
-    <Viewbox  Stretch="Uniform">
+    <Viewbox Stretch="Uniform">
         <Canvas Name="svg44" Width="168" Height="173">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
             <Canvas.Resources>
-                <RectangleGeometry  x:Key="clip0_1436_86" Rect="0, 0, 168, 173"/>
+                <RectangleGeometry x:Key="clip0_1720_79" Rect="0, 0, 168, 173"/>
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g20" >
-                <Path  Name="path2" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
+            <Canvas Name="g20" Clip="{StaticResource clip0_1720_79}">
+                <Path Name="path2" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M30.1631 64.826L40.4923 68.9577C40.6739 69.0304 40.6739 69.2874 40.4923 69.36L30.666 73.2905C30.4844 73.3632 30.4844 73.6202 30.666 73.6928L40.4923 77.6234C40.6739 77.696 40.6739 77.953 40.4923 78.0257L30.666 81.9562C30.4844 82.0288 30.4844 82.2859 30.666 82.3585L40.9951 86.4902" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path4" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
+                <Path Name="path4" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M62.6592 64.826L72.9884 68.9577C73.1699 69.0304 73.1699 69.2874 72.9884 69.36L63.162 73.2905C62.9805 73.3632 62.9805 73.6202 63.162 73.6928L72.9884 77.6234C73.1699 77.696 73.1699 77.953 72.9884 78.0257L63.162 81.9562C62.9805 82.0288 62.9805 82.2859 63.162 82.3585L73.4912 86.4902" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path6" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
+                <Path Name="path6" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M95.1553 64.826L105.484 68.9577C105.666 69.0304 105.666 69.2874 105.484 69.36L95.6581 73.2905C95.4766 73.3632 95.4766 73.6202 95.6581 73.6928L105.484 77.6234C105.666 77.696 105.666 77.953 105.484 78.0257L95.6581 81.9562C95.4766 82.0288 95.4766 82.2859 95.6581 82.3585L105.987 86.4902" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path8" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
+                <Path Name="path8" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M127.651 64.826L137.981 68.9577C138.162 69.0304 138.162 69.2874 137.981 69.36L128.154 73.2905C127.973 73.3632 127.973 73.6202 128.154 73.6928L137.981 77.6234C138.162 77.696 138.162 77.953 137.981 78.0257L128.154 81.9562C127.973 82.0288 127.973 82.2859 128.154 82.3585L138.483 86.4902" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Rectangle  Canvas.Left="21.4976" Canvas.Top="84.3236" Width="123.485" Height="86.6564" RadiusX="4.33282" RadiusY="4.33282" Name="rect10" Fill="#FF808080"/>
-                <Path  Name="path12" Fill="#FF8A8A8A">
+                <Rectangle Canvas.Left="21.4976" Canvas.Top="84.3236" Width="123.485" Height="86.6564" RadiusX="4.33282" RadiusY="4.33282" Name="rect10" Fill="#FF808080"/>
+                <Path Name="path12" Fill="#FF8A8A8A">
                     <Path.Data>
-                        <PathGeometry Figures="M2 35H164V62.6672C164 65.0601 162.06 67 159.667 67H6.33283C3.93988 67 2 65.0601 2 62.6672V35Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M3 10C3 7.23858 5.23858 5 8 5H159C161.761 5 164 7.23858 164 10V60.6672C164 63.0601 162.06 65 159.667 65H7.33283C4.93988 65 3 63.0601 3 60.6672V10Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path14" Fill="#FF9E9E9E">
+                <Path Name="path14" Fill="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M2 6.33282C2 3.93987 3.93987 2 6.33282 2H159.667C162.06 2 164 3.93987 164 6.33282V35H2V6.33282Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
                 <Canvas Name="g18" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path  Name="path16" StrokeThickness="5" Stroke="#FF808080" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+                    <Path Name="path16" StrokeThickness="5" Stroke="#FF808080" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
                         <Path.Data>
                             <PathGeometry Figures="M11.5 3.5C8.5292 3.5 11.2501 3.5 7.0039 3.5C5.34704 3.5 4 4.84315 4 6.5V44V56.5V61.5C4 63.1569 5.34315 64.5 7 64.5H161.5C163.157 64.5 164.5 63.1569 164.5 61.5V31V17V6.5C164.5 4.84315 163.154 3.5 161.498 3.5C158.921 3.5 158.788 3.5 157.5 3.5" FillRule="NonZero"/>
                         </Path.Data>
