--- a/Prevu.Drawings/Machines/Release_01/Material Separation/V01_VB_VibratingScreen_3Layer.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Material Separation/V01_VB_VibratingScreen_3Layer.xaml
@@ -6,54 +6,49 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" 
              IsHitTestVisible="False">
-    <Viewbox  Stretch="Uniform">
-        <Canvas Name="svg46" Width="169" Height="201">
+    <Viewbox Stretch="Uniform">
+        <Canvas Name="svg44" Width="169" Height="201">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
             <Canvas.Resources>
-                <RectangleGeometry  x:Key="clip0_1436_95" Rect="0, 0, 169, 201"/>
+                <RectangleGeometry x:Key="clip0_1720_69" Rect="0, 0, 169, 201"/>
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g22" >
-                <Path  Name="path2" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
+            <Canvas Name="g20" Clip="{StaticResource clip0_1720_69}">
+                <Path Name="path2" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M31.1631 92.826L41.4923 96.9577C41.6739 97.0304 41.6739 97.2874 41.4923 97.36L31.666 101.291C31.4844 101.363 31.4844 101.62 31.666 101.693L41.4923 105.623C41.6739 105.696 41.6739 105.953 41.4923 106.026L31.666 109.956C31.4844 110.029 31.4844 110.286 31.666 110.358L41.9951 114.49" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path4" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
+                <Path Name="path4" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M63.6592 92.826L73.9884 96.9577C74.1699 97.0304 74.1699 97.2874 73.9884 97.36L64.162 101.291C63.9805 101.363 63.9805 101.62 64.162 101.693L73.9884 105.623C74.1699 105.696 74.1699 105.953 73.9884 106.026L64.162 109.956C63.9805 110.029 63.9805 110.286 64.162 110.358L74.4912 114.49" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path6" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
+                <Path Name="path6" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M96.1553 92.826L106.484 96.9577C106.666 97.0304 106.666 97.2874 106.484 97.36L96.6581 101.291C96.4766 101.363 96.4766 101.62 96.6581 101.693L106.484 105.623C106.666 105.696 106.666 105.953 106.484 106.026L96.6581 109.956C96.4766 110.029 96.4766 110.286 96.6581 110.358L106.987 114.49" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path8" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
+                <Path Name="path8" StrokeThickness="2.16641" Stroke="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M128.651 92.826L138.981 96.9577C139.162 97.0304 139.162 97.2874 138.981 97.36L129.154 101.291C128.973 101.363 128.973 101.62 129.154 101.693L138.981 105.623C139.162 105.696 139.162 105.953 138.981 106.026L129.154 109.956C128.973 110.029 128.973 110.286 129.154 110.358L139.483 114.49" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Rectangle  Canvas.Left="22.4976" Canvas.Top="112.324" Width="123.485" Height="86.6564" RadiusX="4.33282" RadiusY="4.33282" Name="rect10" Fill="#FF808080"/>
-                <Path  Name="path12" Fill="#FF8A8A8A">
+                <Rectangle Canvas.Left="22.4976" Canvas.Top="112.324" Width="123.485" Height="86.6564" RadiusX="4.33282" RadiusY="4.33282" Name="rect10" Fill="#FF808080"/>
+                <Path Name="path12" Fill="#FF8A8A8A">
                     <Path.Data>
-                        <PathGeometry Figures="M3 63H165V90.6672C165 93.0601 163.06 95 160.667 95H7.33283C4.93988 95 3 93.0601 3 90.6672V63Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M3 6C3 4.34315 4.34315 3 6 3H162C163.657 3 165 4.34315 165 6V88.6672C165 91.0601 163.06 93 160.667 93H7.33283C4.93988 93 3 91.0601 3 88.6672V6Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path14" Fill="#FF8A8A8A">
-                    <Path.Data>
-                        <PathGeometry Figures="M3 3H165V30.6672C165 33.0601 163.06 35 160.667 35H7.33283C4.93988 35 3 33.0601 3 30.6672V3Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Path  Name="path16" Fill="#FF9E9E9E">
+                <Path Name="path14" Fill="#FF9E9E9E">
                     <Path.Data>
                         <PathGeometry Figures="M3 34.3328C3 31.9399 4.93987 30 7.33282 30H160.667C163.06 30 165 31.9399 165 34.3328V63H3V34.3328Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Canvas Name="g20" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path  Name="path18" StrokeThickness="5" Stroke="#FF808080" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+                <Canvas Name="g18" Effect="{StaticResource MaterialDesignElevationShadow1}">
+                    <Path Name="path16" StrokeThickness="5" Stroke="#FF808080" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
                         <Path.Data>
                             <PathGeometry Figures="M12.5 3.5C9.51594 3.5 11.5475 3.5 7.00542 3.5C5.34857 3.5 4 4.84315 4 6.5V72V84.5V89.5C4 91.1569 5.34315 92.5 7 92.5H162.5C164.157 92.5 165.5 91.1569 165.5 89.5V59V45V6.5C165.5 4.84315 164.154 3.5 162.498 3.5C159.921 3.5 159.788 3.5 158.5 3.5" FillRule="NonZero"/>
                         </Path.Data>
