--- a/Prevu.Drawings/Machines/Release_01/Trasporto/V01_SCW_Screw_wHopper.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Trasporto/V01_SCW_Screw_wHopper.xaml
@@ -6,37 +6,32 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" 
              IsHitTestVisible="False">
-    <Viewbox  Stretch="Uniform">
-        <Canvas Name="svg55" Width="152" Height="148">
+    <Viewbox Stretch="Uniform">
+        <Canvas Name="svg53" Width="148" Height="148">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
             <Canvas.Resources>
-                <RectangleGeometry  x:Key="clip0_1438_161" Rect="0, 0, 152, 148"/>
+                <RectangleGeometry x:Key="clip0_1720_41" Rect="0, 0, 148, 148"/>
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g14" >
-                <Path  Name="path2" Fill="#FF808080" HorizontalAlignment="Center" Canvas.Top="0.166" VerticalAlignment="Center">
+            <Canvas Name="g12" Clip="{StaticResource clip0_1720_41}">
+                <Path Name="path2" Fill="#FF808080">
                     <Path.Data>
-                        <PathGeometry Figures="M2 58V77C2 77.5523 2.44771 78 3 78H57.5L81.5 54H6C3.79086 54 2 55.7909 2 58Z" FillRule="NonZero"/>
+                        <PathGeometry Figures="M145.703 16.1662L133.237 2.30033C132.602 1.59348 131.503 1.56394 130.831 2.23559L80.4858 52.5148C80.1747 52.8255 79.7531 53 79.3134 53H5C2.79086 53 1 54.7909 1 57V76.8151C1 76.9373 1.02241 77.0585 1.06611 77.1727L15.5622 115.035C15.7885 115.626 15.6589 116.294 15.2281 116.757L2.08875 130.897C1.4811 131.55 1.49975 132.568 2.13094 133.199L14.759 145.827C15.4068 146.475 16.457 146.475 17.105 145.828L121 42V49C121 51.2091 122.791 53 125 53H142.998C145.208 53 146.999 51.208 146.998 48.9981L146.984 19.5066C146.984 18.2732 146.527 17.0835 145.703 16.1662Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Path  Name="path4" Fill="#FF808080">
-                    <Path.Data>
-                        <PathGeometry Figures="M146.703 17.1662L134.237 3.3006C133.602 2.59365 132.503 2.56421 131.831 3.2361L57.4858 77.5146C57.1747 77.8254 56.753 78 56.3132 78H3.45366C2.75252 78 2.26907 78.7028 2.51976 79.3576L16.5622 116.035C16.7885 116.626 16.6589 117.294 16.2281 117.757L3.08875 131.897C2.4811 132.55 2.49975 133.568 3.13094 134.199L15.759 146.827C16.4068 147.475 17.457 147.475 18.105 146.828L122 43V50C122 52.2091 123.791 54 126 54H143.998C146.208 54 147.999 52.208 147.998 49.9981L147.984 20.5066C147.984 19.2732 147.527 18.0835 146.703 17.1662Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Canvas Name="g8" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path  Name="path6" StrokeThickness="2" Stroke="#FF292929" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+                <Canvas Name="g6" Effect="{StaticResource MaterialDesignElevationShadow1}">
+                    <Path Name="path4" StrokeThickness="2" Stroke="#FF292929" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
                         <Path.Data>
-                            <PathGeometry Figures="M9.00022 134.673L19.6068 138.208L16.0713 127.602L26.6779 131.137L23.1424 120.53L33.749 124.066L30.2134 113.459L40.82 116.995L37.2845 106.388L47.8911 109.924L44.3556 99.3173L54.9622 102.853L51.4266 92.2462L62.0332 95.7817L58.4977 85.1751L69.1043 88.7107L65.5688 78.1041L76.1754 81.6396L72.6398 71.033L83.2464 74.5685L79.7109 63.9619L90.3175 67.4975L86.782 56.8909L97.3886 60.4264L93.853 49.8198L104.46 53.3553L100.924 42.7487L111.531 46.2843L107.995 35.6777L118.602 39.2132L115.066 28.6066L125.673 32.1421L122.137 21.5355L132.744 25.0711" FillRule="NonZero"/>
+                            <PathGeometry Figures="M8.00022 133.673L18.6068 137.208L15.0713 126.602L25.6779 130.137L22.1424 119.53L32.749 123.066L29.2134 112.459L39.82 115.995L36.2845 105.388L46.8911 108.924L43.3556 98.3173L53.9622 101.853L50.4266 91.2462L61.0332 94.7817L57.4977 84.1751L68.1043 87.7107L64.5688 77.1041L75.1754 80.6396L71.6398 70.033L82.2464 73.5685L78.7109 62.9619L89.3175 66.4975L85.782 55.8909L96.3886 59.4264L92.853 48.8198L103.46 52.3553L99.9241 41.7487L110.531 45.2843L106.995 34.6777L117.602 38.2132L114.066 27.6066L124.673 31.1421L121.137 20.5355L131.744 24.0711" FillRule="NonZero"/>
                         </Path.Data>
                     </Path>
                 </Canvas>
-                <Canvas Name="g12" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path  Name="path10" StrokeThickness="2" Stroke="#FF808080" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+                <Canvas Name="g10" Effect="{StaticResource MaterialDesignElevationShadow1}">
+                    <Path Name="path8" StrokeThickness="2" Stroke="#FF808080" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
                         <Path.Data>
-                            <PathGeometry Figures="M9 55H5C4 55 3 56 3 57V77.6402C3 77.8782 3.04246 78.1142 3.12537 78.3372L16.8671 115.298C17.2561 116.344 17.0319 117.52 16.285 118.35L4 132C3.5 132.5 3.5 133.5 4 134L16 146C16.5 146.5 17.5 146.5 18 146L121 43C123 41 123 42 123 43V51C123 52 124 53 125 53H127M76 55H79.7574C80.553 55 81.3161 54.6839 81.8787 54.1213L132 4C132.5 3.5 133.5 3.5 134 4L146.023 17.8724C146.653 18.5997 147 19.5298 147 20.4921V51C147 52 146 53 145 53H143" FillRule="NonZero"/>
+                            <PathGeometry Figures="M8 54H4C3 54 2 55 2 56V76.6402C2 76.8782 2.04246 77.1142 2.12537 77.3372L15.8671 114.298C16.2561 115.344 16.0319 116.52 15.285 117.35L3 131C2.5 131.5 2.5 132.5 3 133L15 145C15.5 145.5 16.5 145.5 17 145L120 42C122 40 122 41 122 42V50C122 51 123 52 124 52H126M75 54H78.7574C79.553 54 80.3161 53.6839 80.8787 53.1213L131 3C131.5 2.5 132.5 2.5 133 3L145.023 16.8724C145.653 17.5997 146 18.5298 146 19.4921V50C146 51 145 52 144 52H142" FillRule="NonZero"/>
                         </Path.Data>
                     </Path>
                 </Canvas>
