--- a/Prevu.Synoptics.V3923_Evanses/Details/D020.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D020.xaml
@@ -10,102 +10,113 @@
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.D020" >
 
-    <Canvas Height="449" Width="569">
-        <Labels:Pipe Width="143" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="291" Canvas.Top="211" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="146" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="289" Canvas.Top="282" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Canvas Height="464" Width="647">
+        <Labels:Pipe Width="28" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="239" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="44" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="270" Canvas.Top="191">
+        <Labels:Pipe Width="28" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="571" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="61" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="360" Canvas.Top="242"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" StatusComponent="020-02-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="364" Canvas.Top="295">
+        <Labels:Pipe Width="168" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="333" Canvas.Top="308" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="273" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="373-01-MA1" Canvas.Left="58" Canvas.Top="215" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="326" Canvas.Top="196">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="273" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="373-01-MA1" Canvas.Left="9" Canvas.Top="225" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="64" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="445" Canvas.Top="195" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="51" StatusComponent="354-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="79" Canvas.Top="198" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="46" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="409" Canvas.Top="190" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="336" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="251" Canvas.Top="226" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="171" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="373-01-MA1" Canvas.Left="104" Canvas.Top="282" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="425" Canvas.Top="298" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="411" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_CV_ValveDouble Canvas.Left="262" Canvas.Top="141" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_WaterPump Canvas.Left="337" Canvas.Top="274" Color="Oil" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="173" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="373-01-MA1" Canvas.Left="54" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="51" StatusComponent="354-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="74" Canvas.Top="266" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="2" Stroke="Black" Width="54" Canvas.Left="423" Canvas.Top="273" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="409" Canvas.Top="266" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValveDouble Canvas.Left="327" Canvas.Top="137" Height="44" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WaterPump Canvas.Left="392" Canvas.Top="304" Color="Oil" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Machines:V01_WaterPump.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="-90"/>
                 </TransformGroup>
             </Machines:V01_WaterPump.RenderTransform>
         </Machines:V01_WaterPump>
-        <Rectangle HorizontalAlignment="Center" Height="86" VerticalAlignment="Top" Width="376" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="107" Canvas.Top="351"/>
-        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="228" Canvas.Top="376" HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Height="20" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Center" Height="86" VerticalAlignment="Top" Width="376" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="102" Canvas.Top="367"/>
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="223" Canvas.Top="392" HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Height="20" RenderTransformOrigin="0.5,0.5">
             <Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="-90"/>
                 </TransformGroup>
             </Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:V01_SCW_ScrewConveyor_straight>
-        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="34" Canvas.Top="172" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="29" Canvas.Top="240" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="180"/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="121" Canvas.Top="165" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="40" Height="40" Canvas.Left="121" Canvas.Top="249" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
-        <Machines:V01_WaterPump Canvas.Left="120" Canvas.Top="274" Color="Oil" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:V01_WaterPump Canvas.Left="119" Canvas.Top="309" Color="Oil" Height="40" Width="40" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:V01_WaterPump.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="-90"/>
                 </TransformGroup>
             </Machines:V01_WaterPump.RenderTransform>
         </Machines:V01_WaterPump>
-        <Rectangle Height="6" Stroke="Black" Width="80" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="129" Canvas.Top="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_CV_ValveDouble Canvas.Left="401" Canvas.Top="141" Height="44" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="020-23-CV1" Canvas.Left="17" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-02-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="17" Canvas.Top="274"/>
-        <Labels:DeviceLabel ComponentName="020-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="235" Canvas.Top="274"/>
-        <Labels:DeviceLabel ComponentName="020-11-R1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="150" Canvas.Top="368"/>
-        <Labels:DeviceLabel ComponentName="020-42-TT1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="312" Canvas.Top="368"/>
-        <Labels:DeviceLabel ComponentName="020-21-CV1" Canvas.Left="248" Canvas.Top="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="020-21-PT1" Canvas.Left="248" Canvas.Top="17" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="020-45-CS1" Canvas.Left="451" Canvas.Top="274" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="020-22-CV1" Canvas.Left="387" Canvas.Top="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="020-22-PT1" Canvas.Left="387" Canvas.Top="17" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_CV_ValveDouble Canvas.Left="446" Canvas.Top="137" Height="44" Width="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_HydraulicAccumulator Canvas.Left="242" Canvas.Top="173" Height="50" Width="22" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_HydraulicAccumulator Canvas.Left="574" Canvas.Top="173" Height="50" Width="22" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="6" Stroke="Black" Width="33" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="124" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="6" Stroke="Black" Width="34" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="173" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-23-CV1" Canvas.Left="12" Canvas.Top="195" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-02-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="20" Canvas.Top="304"/>
+        <Labels:DeviceLabel ComponentName="020-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="290" Canvas.Top="304"/>
+        <Labels:DeviceLabel ComponentName="020-11-R1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="145" Canvas.Top="384"/>
+        <Labels:DeviceLabel ComponentName="020-42-TT1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="384"/>
+        <Labels:DeviceLabel ComponentName="020-21-CV1" Canvas.Left="313" Canvas.Top="77" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-21-PT1" Canvas.Left="313" Canvas.Top="13" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-45-CS1" Canvas.Left="449" Canvas.Top="249" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-22-CV1" Canvas.Left="432" Canvas.Top="77" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-22-PT1" Canvas.Left="432" Canvas.Top="13" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-21-CV3" Canvas.Left="208" Canvas.Top="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="020-22-CV3" Canvas.Left="540" Canvas.Top="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
